--- a/public/fonts/fonts.css
+++ b/public/fonts/fonts.css
@@ -36,3 +36,10 @@
   font-display: swap;
   font-weight: 700;
 }
+@font-face {
+  font-family: "Muyao";
+  src: url("fonts/Muyao-Softbrush.ttf");
+  font-display: swap;
+  font-weight: 700;
+}
+
