--- a/public/fonts/fonts.css
+++ b/public/fonts/fonts.css
@@ -37,8 +37,8 @@
   font-weight: 700;
 }
 @font-face {
-  font-family: "Muyao";
-  src: url("fonts/Muyao-Softbrush.ttf");
+  font-family: "myfont";
+  src: url("myfont.woff2");
   font-display: swap;
   font-weight: 700;
 }
